--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/secondLayout"
-    tools:context="com.example.if26.SettingActivity">
+    tools:context="com.example.if26new.SettingActivity">
 
     <Switch
         android:id="@+id/nightMode"
