--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -4,32 +4,35 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.if26new.HomeActivity"
-    android:background="@drawable/gradientbackground">
+    android:background="@drawable/gradientbackground"
+    tools:context="com.example.if26new.HomeActivity">
 
     <LinearLayout
         android:id="@+id/linearLayout"
         android:layout_width="416dp"
         android:layout_height="47dp"
-        android:layout_marginBottom="71dp"
+        android:layout_marginTop="614dp"
+        android:layout_marginBottom="70dp"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <ImageButton
             android:id="@+id/previousMusic"
             android:layout_width="1dp"
-            android:background="#000000"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            android:background="#000000"
             app:srcCompat="@drawable/previous" />
 
         <ImageButton
             android:id="@+id/nextMusic"
             android:layout_width="5dp"
-            android:background="#000000"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            android:background="#000000"
             app:srcCompat="@drawable/next" />
 
         <TextView
@@ -38,9 +41,9 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:background="#000000"
-            android:text="Sunflower - Spider-Man : Into the Spider-Verse"
-            android:singleLine="true"
             android:gravity="center"
+            android:singleLine="true"
+            android:text="Sunflower - Spider-Man : Into the Spider-Verse"
             android:textColor="#FFFFFF" />
 
         <ImageButton
@@ -49,48 +52,38 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:background="#000000"
-            app:srcCompat="@drawable/pause" /></LinearLayout>
-
-    <LinearLayout
-
-        android:layout_width="412dp"
-        android:layout_height="71dp"
-        android:orientation="horizontal"
-        android:background="#1C376E"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
-
-        <com.google.android.material.bottomnavigation.BottomNavigationView
-            android:id="@+id/bottonView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_gravity="bottom"
-            android:background="@null"
-            app:menu="@menu/bottom_navigation_menu"
-            android:layout_alignParentBottom="true" />
+            app:srcCompat="@drawable/pause" />
     </LinearLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:id="@+id/fragmentContainter"
-        android:layout_height="614dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
 
-        <ImageButton
-            android:id="@+id/imageButton"
-            android:layout_width="142dp"
-            android:layout_height="136dp"
-            android:layout_marginStart="16dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.071"
+        android:id="@+id/linearLayout3"
+        android:layout_width="412dp"
+        android:layout_height="71dp"
+        android:background="#1C376E"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout">
+
+        <com.google.android.material.bottomnavigation.BottomNavigationView
+            android:id="@+id/bottonView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@null"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.117"
-            tools:src="@tools:sample/backgrounds/scenic" />
+            app:menu="@menu/bottom_navigation_menu" />
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/fragmentContainter"
+        android:layout_width="match_parent"
+        android:layout_height="614dp"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
