--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -7,17 +7,30 @@
     android:background="@drawable/gradientbackground"
     tools:context="com.example.if26new.HomeActivity">
 
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/fragmentContainter"
+        android:layout_width="match_parent"
+        android:layout_height="629dp"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0">
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
     <LinearLayout
         android:id="@+id/linearLayout"
-        android:layout_width="416dp"
+        android:layout_width="match_parent"
         android:layout_height="47dp"
-        android:layout_marginTop="614dp"
-        android:layout_marginBottom="70dp"
         android:orientation="horizontal"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/bottonView"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.2"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0">
 
         <ImageButton
             android:id="@+id/previousMusic"
@@ -53,37 +66,17 @@
             android:layout_weight="1"
             android:background="#000000"
             app:srcCompat="@drawable/pause" />
+
     </LinearLayout>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-
-        android:id="@+id/linearLayout3"
-        android:layout_width="412dp"
-        android:layout_height="71dp"
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottonView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:background="#1C376E"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout">
-
-        <com.google.android.material.bottomnavigation.BottomNavigationView
-            android:id="@+id/bottonView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@null"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:menu="@menu/bottom_navigation_menu" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/fragmentContainter"
-        android:layout_width="match_parent"
-        android:layout_height="614dp"
-        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:menu="@menu/bottom_navigation_menu" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
