--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -13,28 +13,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <TextView
-            android:id="@+id/textView3"
-            android:layout_width="416dp"
-            android:layout_height="76dp"
-            android:text="@string/hello_blank_fragment"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <Button
-            android:id="@+id/switchUserButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="85dp"
-            android:layout_marginEnd="238dp"
-            android:layout_marginBottom="40dp"
-            android:tag="playlist"
-            android:text="Button"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent" />
-
         <ScrollView
             android:id="@+id/layout"
             android:layout_height="match_parent"
@@ -48,8 +26,9 @@
                 android:id="@+id/horizontalView"
                 android:layout_height="wrap_content"
                 android:scrollbars="horizontal|vertical"
-                android:layout_width="wrap_content"
-                android:layout_marginTop="5dip">
+                android:layout_width="match_parent"
+                android:layout_marginTop="5dip"
+                android:fillViewport="true">
 
                 <TableLayout
                     android:layout_width="match_parent"
