--- a/app/src/main/res/layout/activity_listening.xml
+++ b/app/src/main/res/layout/activity_listening.xml
@@ -132,22 +132,22 @@
         android:id="@+id/addPlaylistButton"
         android:layout_width="68dp"
         android:layout_height="68dp"
-        android:layout_marginTop="8dp"
         android:background="@null"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
+        app:layout_constraintVertical_bias="0.736"
         app:srcCompat="@drawable/addplaylist" />
 
     <ImageButton
         android:id="@+id/likeButton"
         android:layout_width="68dp"
         android:layout_height="68dp"
-        android:layout_marginTop="8dp"
         android:background="@null"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
+        app:layout_constraintVertical_bias="0.736"
         app:srcCompat="@drawable/likenoclick" />
 
     <TextView
@@ -198,14 +198,13 @@
         android:id="@+id/lyricsButton"
         android:layout_width="68dp"
         android:layout_height="68dp"
-        android:layout_marginStart="103dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="104dp"
         android:background="@null"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/addPlaylistButton"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toEndOf="@+id/likeButton"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
+        app:layout_constraintVertical_bias="0.736"
         app:srcCompat="@drawable/lyrics" />
 
     <TextView
